# bosch_imu_driver

./: CMakeLists.txt  package.xml
config/: imu_bosch.yaml
launch/: imu.launch
nodes/: bosch_imu_node.py
