<package format="2">
  <name>bosch_imu_driver</name>
  <version>1.0.0</version>
  <author>Michal Drwiega</author>
  <maintainer email="drwiega.michal@gmail.com">Michal Drwiega</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/bosch_imu_driver</url>

	<description>
  This package contains the driver for IMU Bosch BNO055.
  In current version only UART communication is implemented.
	</description>	

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>python-serial</depend>
  <build_depend>roslint</build_depend>
</package>

